--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>uHost</title>
     <link rel="shortcut icon" href="usericon.png">
-    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Anton" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
   </head>
 
@@ -16,6 +17,7 @@
       </section>
       <section id="plans">
         <h1 class="section-title">Choose Your Plan</h1>
+        <p>make sure you get the most for your money!</p>
       </section>
     </main>
   </body>
