--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>uHost</title>
-    <link rel="shortcut icon" href="usericon.png">
-    <link href="https://fonts.googleapis.com/css2?family=Anton" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700" rel="stylesheet">
-    <link rel="stylesheet" href="main.css">
+    <link rel="shortcut icon" href="usericon.png" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Anton"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="main.css" />
   </head>
 
   <body>
@@ -18,6 +24,12 @@
       <section id="plans">
         <h1 class="section-title">Choose Your Plan</h1>
         <p>make sure you get the most for your money!</p>
+        <a
+          >Lorem ipsum dolor sit amet consectetur, adipisicing elit. Id magnam
+          doloribus ea, quam corrupti natus ducimus vel est distinctio fugiat
+          voluptate placeat fugit veritatis odio voluptatem sapiente eligendi
+          consequatur dolore?</a
+        >
       </section>
     </main>
   </body>
